@@ -1,3 +1,10 @@
+2010-01-13  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Build fix. Make the XFORM operator work on wx port.
+
+        * platform/graphics/transforms/TransformationMatrix.h:
+        * wscript:
+
 2010-01-13  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Timothy Hatcher.
